WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191683
[LFC] FormattingContext base class should not declare ::computeStaticPosition.
https://bugs.webkit.org/show_bug.cgi?id=191683
Summary
[LFC] FormattingContext base class should not declare ::computeStaticPosition.
alan
Reported
2018-11-15 06:54:00 PST
apparently only BlockFormattingContext uses it.
Attachments
Patch
(3.94 KB, patch)
2018-11-15 06:55 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-11-15 06:55:38 PST
Created
attachment 354927
[details]
Patch
alan
Comment 2
2018-11-15 06:58:24 PST
Committed
r238226
: <
https://trac.webkit.org/changeset/238226
>
Radar WebKit Bug Importer
Comment 3
2018-11-15 06:59:27 PST
<
rdar://problem/46094722
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug