[LFC] FormattingContext base class should not declare computeStaticPosition. https://bugs.webkit.org/show_bug.cgi?id=191683

Reviewed by Antti Koivisto.

Apparently only BlockFormattingContext uses it.

* layout/FormattingContext.h:
* layout/blockformatting/BlockFormattingContext.h:
* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computeStaticPosition const): Deleted.
* layout/inlineformatting/InlineFormattingContext.h:

Canonical link: https://commits.webkit.org/206428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238226 268f45cc-cd09-0410-ab3c-d52691b4dbfc